feat: add card structure

--- a/style.css
+++ b/style.css
@@ -5,3 +5,16 @@
   background-color: #000000;
   background-image: url('https://i.siteapi.org/8L9Zzc6cXeoauwG2uqPlOFqUvuI=/filters:fill(transparent)/s2.siteapi.org/1f98566180b6481/img/6l73fvagye80ss08s848ssogwkco88');
 }
+
+.messengers--tel .messengers__wrapper {
+  background-color: #ffffff;
+  border: 1px solid #000000;
+}
+
+.messengers--tel .messengers__icon svg {
+  fill: #000000;
+}
+
+.messengers--tel .messengers__info--name {
+  color: #000000;
+}
